package cn.thenai.bridge;

public interface Brand {
    public void open();

    public void close();

    public void call();
}